--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">玩安卓</string>
+    <string name="easy_glide_save_succss">保存图片成功</string>
+    <string name="easy_glide_save_failed">保存失败</string>
+    <string name="cancel">取消</string>
+    <string name="sure">确定</string>
 </resources>
